grammar/last_grammar.txt
******************************************************************************
Tools punctuations      ~ ! @ # * ( ) _ + ' ;
******************************************************************************
&&        &&
?     ?
||            ||
,                 ,
:             :
=                    =
{        {
} 	    }

++               ++  
/                    /  
%             %
--               --    
-              -  
id_pattern              [a-zA-Z]([a-zA-Z0-9_]*[a-zA-Z0-9])? 
string_pattern          [ a-zA-Z0-9_;:!,?\|[](]&~^$µeè@à` ]*
number_pattern          [0-9]+ 
comparator              (>, >=, <, <=, ==, ===, !=)
symbole_aff             =, <-, :=

*********************************************************************************************

INSTRUCTIONS            ->	{ INSTRUCTION INSTRUCTIONS }
                        |	INSTRUCTION FINSTRUCTION .

FINSTRUCTION            ->	INSTRUCTIONS
                        |	.

INSTRUCTION             ->	AFFECTATION ;
                        |	APPEL_FONCTION ;
                        |	RETURN ;
                        |	BOUCLE
                        |	INPUT_OUTPUT
                        |	FONCTION
                        |	CONTROLE
                        |	VAR_DECLARATION ; .

AFFECTATION             ->	id Fid .

Fid                     ->	:= EXPRESSION ;
                        |	= EXPRESSION ;
                        |	<- EXPRESSION ; .

EXPRESSION              ->	TERM FTERM
                        |	( EXPRESSION ) .

FTERM                   ->	
                        |	+ EXPRESSION
                        |	- EXPRESSION .

TERM                    ->	FACTEUR FFACTEUR
                        |	+ FACTEUR
                        |	- FACTEUR .

FACTEUR                 ->	id
                        |	number
                        |	boolean
                        |	APPEL_FONCTION
                        |   INPUT_OUTPUT
                        |	string .

FFACTEUR                ->	OPERATEURMULT FACTEUR
                        |	
                        |	OPERATEURSPECIAUX .

OPERATEURMULT           ->	*
                        |	mult
                        |	/
                        |	div
                        |	%
                        |	mod
                        |	modulo .

OPERATEURSPECIAUX       ->	++
                        |	-- .



APPEL_FONCTION          ->	call id ( APPEL_FONCTION_ARG .

APPEL_FONCTION_ARG      ->	ARGUMENT )
                        |	) .

ARGUMENT                ->	id ARGUMENT1 .

ARGUMENT1               ->	, id ARGUMENT1
                        |	.

RETURN                  ->	return EXPRESSION .

BOUCLE                  ->	FORLOOP_STATEMENT
                        |	DOWHILELOOP_STATEMENT
                        |	WHILELOOP_STATEMENT .

FORLOOP_STATEMENT       ->	for Ffor .

Ffor                    ->	( FOR1
                        |	id Fid3 .

FOR1                     ->	VAR_DECLARATION FVAR_DECLARATION .
 
FVAR_DECLARATION        ->	; FVAR_DECLARATION2
                        |	: FVAR_DECLARATION3 .

FVAR_DECLARATION2        ->	CONDITIONS FCONDITIONS1 .

FCONDITIONS1            ->	; FCONDITIONS2 .
  
FCONDITIONS2            ->	INSTRUCTION FINSTRUCTION1 .
  
FINSTRUCTION1           ->	) FINSTRUCTION2 .
  
FINSTRUCTION2            ->	{ INSTRUCTIONS }
                        |	INSTRUCTION .
  
FVAR_DECLARATION3       ->	id Fid4 .
                        
Fid4                    ->	) Fid5 .

Fid5                     ->	{ INSTRUCTIONS }
                        |	INSTRUCTION .

Fid3                    ->	in id { INSTRUCTIONS }
                        |	= number to number do INSTRUCTIONS ; .

WHILELOOP_STATEMENT     ->	while Fwhile .

Fwhile                  ->	( Fwhile2 .

Fwhile2                 ->	CONDITIONS FCONDITIONS .

FCONDITIONS             ->	) FCONDITIONS3 .

FCONDITIONS3            ->	INSTRUCTION
                        |	{ INSTRUCTIONS } .

DOWHILELOOP_STATEMENT   ->	do { INSTRUCTIONS } while ( CONDITIONS ) ;
                        |	repeat INSTRUCTIONS until CONDITIONS ; .

CONDITIONS              ->	CONDITION FCONDITION
                        |	! ( CONDITION )
                        |	not ( CONDITION ) .

FCONDITION              ->	&& CONDITIONS
                        |	|| CONDITIONS
                        |	and CONDITIONS
                        |	or CONDITIONS
                        |	.

CONDITION               ->	EXPRESSION comparator EXPRESSION .

INPUT_OUTPUT            ->	print ( ARGUMENT ) ;
                        |	printf ( ARGUMENT ) ;
                        |	scanf ( ARGUMENT ) ;
                        |	input ( ARGUMENT ) ;
                        |	log ( ARGUMENT ) ;
                        |	fprintf ( ARGUMENT ) ;
                        |	fscanf ( ARGUMENT ) ;
                        |	fread ( ARGUMENT ) ;
                        |	fwrite ( ARGUMENT ) ;
                        |	write ( ARGUMENT ) ;
                        |	read ( ARGUMENT ) ;
                        |	puts ( ARGUMENT ) ;
                        |	gets ( ARGUMENT ) ; .

FONCTION                ->	def type FONCTION2
                        |	function type FONCTION2 .

FONCTION2               ->	id ( PARAMETER ) { INSTRUCTIONS } .

PARAMETER               ->	id type PARAMETER1 
                        | .

PARAMETER1              ->	, id type PARAMETER1
                        |	.

CONTROLE                ->	IF
                        |	CASE
                        |	SHORTHAND .

SHORTHAND               ->	( CONDITION ) ? INSTRUCTION : INSTRUCTION .

IF                      ->	if Fif .


Fif                     ->	( Fif2 .

Fif2                     ->	CONDITION FCONDITION1 .

FCONDITION1             ->	) FCONDITION2 .

FCONDITION2             ->	BLOCK_IF FBLOCK_IF .

FBLOCK_IF               ->	
                        |	else BLOCK_IF
                        |	elif BLOCK_IF else BLOCK_IF .

BLOCK_IF                ->	{ INSTRUCTIONS } .

CASE                    ->	switch ( EXPRESSION ) { BLOCK_CASE } .

BLOCK_CASE              ->	case Fcase
                        |	default : INSTRUCTIONS .

Fcase                   ->	FACTEUR FFACTEUR1 .

FFACTEUR1               ->	: FFACTEUR2 .

FFACTEUR2               ->	INSTRUCTIONS FINSTRUCTIONS .

FINSTRUCTIONS           ->	
                        |	BLOCK_CASE .


VAR_DECLARATION         ->	const TYPE IDS_CONST
                        |	let VARS2 
                        |   TYPE VARS2 .

VARS2                  ->	id Fid1 .

Fid1                    ->	VARS_TYPE FVARS_TYPE .

FVARS_TYPE              ->	symbole_aff Fsymbole_aff1
                        |	, VARS2
                        |	.

Fsymbole_aff1           ->	EXPRESSION FEXPRESSION1 .

FEXPRESSION1            ->	, VARS2
                        |	.

VARS_TYPE               ->	: type
                        |	is type 
                        |  .

IDS_CONST               ->	id Fid2 .

Fid2                    ->	symbole_aff Fsymbole_aff .

Fsymbole_aff            ->	EXPRESSION FEXPRESSION .


FEXPRESSION             ->	, IDS_CONST
                        |	.
